--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "chong",
   "version": "0.1.0",
+  "homepage": "https://a40035619.github.io/uninavi5",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
@@ -9,14 +10,22 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^7.9.1",
+    "react-scripts": "^5.0.1",
+    "react-swipeable": "^7.0.2",
+    "swiper": "^12.0.2",
     "web-vitals": "^2.1.4"
+  },
+  "resolutions": {
+    "webpack-dev-server": "4.15.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -35,5 +44,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.3.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.13"
   }
 }
